# heic-decoder-rs

./: CABAC-DEBUG-HANDOFF.md  CLAUDE.md  Cargo.toml
crates/hevc-compare/cpp/: cabac_compare.cpp
crates/hevc-compare/src/: lib.rs
src/hevc/: cabac.rs  ctu.rs  debug.rs  intra.rs  mod.rs  residual.rs  slice.rs  transform.rs
tests/: compare_reference.rs  decode_heic.rs  trace_bad_pixel.rs
